Address stack trace review feedback